--- a/client/kode/src/App.css
+++ b/client/kode/src/App.css
@@ -1,3 +1,31 @@
 .App {
   text-align: center;
 }
+
+.header {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 55px;
+  background-color: #e5e6e7;
+  font-size: 17px;
+}
+.header > * {
+  padding: 0 1rem;
+  color: rgb(68, 67, 67);
+  margin-right: 20px;
+  line-height: 3em;
+  height: 3em;
+}
+
+.posts {
+  background-color: rgb(194, 146, 218);
+}
+
+.post {
+  background-color: rgb(248, 197, 223);
+}
+
+.form {
+  background-color: lightblue;
+}
