linkanje na tutorijale

--- a/client/kode/src/components/Post/Post.css
+++ b/client/kode/src/components/Post/Post.css
@@ -6,8 +6,11 @@
   text-align: start;
 }
 
+a {
+  text-decoration: none;
+}
 .postImage {
-  width: inherit;
+  width: 280px;
   height: 150px;
   border-radius: 15px;
 }
