--- a/client/kode/src/components/Form/Form.css
+++ b/client/kode/src/components/Form/Form.css
@@ -1,3 +1,60 @@
 .form {
-  background-color: rgba(173, 216, 230, 0.068);
+  background-color: rgba(173, 216, 230, 0.028);
+}
+
+.inputs {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  margin: 0 30px 0 30px;
+}
+
+.inputs > * {
+  width: 500px;
+  height: 40px;
+  margin-top: 5px;
+  border-radius: 5px;
+}
+
+.buttons {
+  display: flex;
+  justify-content: flex-end;
+}
+.clear {
+  margin-left: 10px;
+  background-color: #c2d3c6;
+  border-radius: 28px;
+  border: 1px solid #1b381f;
+  display: inline-block;
+  cursor: pointer;
+  color: #413f3f;
+  font-family: Arial;
+  font-size: 14px;
+  padding: 11px 23px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #8c8d8b;
+}
+.clear:hover {
+  background-color: #b4c0b7;
+}
+
+.btn {
+  margin-left: 10px;
+  background-color: #53d676;
+  border-radius: 28px;
+  border: 1px solid #18ab29;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 14px;
+  padding: 11px 23px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #2f6627;
+}
+
+.btn:hover {
+  background-color: #62aa7a;
 }
