--- a/client/kode/src/components/Header/Header.css
+++ b/client/kode/src/components/Header/Header.css
@@ -35,3 +35,12 @@
 .logo {
   margin-left: 20px;
 }
+.signin {
+  color: rgb(243, 161, 106);
+}
+.logout {
+  color: rgb(63, 138, 224);
+  background-color: inherit;
+  border: none;
+  cursor: pointer;
+}
