--- a/client/kode/src/components/Post/Post.css
+++ b/client/kode/src/components/Post/Post.css
@@ -30,7 +30,11 @@ a {
   margin-right: 10px;
   border: 1px solid rgb(158, 157, 157);
 }
-
+.buttons {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 10px;
+}
 .textInPost {
   margin-left: 10px;
 }
